--- a/css/main.css
+++ b/css/main.css
@@ -267,6 +267,18 @@ main {
 .vContainer .n23 { background: url(../img/n/23.png) center no-repeat; }
 .vContainer .n25 { background: url(../img/n/25.png) center no-repeat; }
 
+.tooltip {
+	display:none;
+	position:absolute;
+	border:1px solid #333;
+	background-color:#161616;
+	border-radius:5px;
+	padding:10px;
+	color:#fff;
+	font-size:13px;
+	text-align: center;
+}
+
 /* Slide 1 */
 #slide-1 .bcg {background-image:url('../img/bg1.png')}
 #slide-1 .logo {  }
