--- a/css/main.css
+++ b/css/main.css
@@ -192,6 +192,18 @@ main {
 	}
 	
 .logo {
+	position: absolute;
+	left: 50%;
+	margin-left: -113px;
+	top: 10%;
+	z-index: 100;
+	
+	width: 226px;
+	height: 171px;
+	background-image:url('../img/Createlogo_black_l.png');	
+}
+	
+.smallerLogo {
 	position: fixed;
 	left: 50%;
 	margin-left: -84px;
@@ -307,7 +319,7 @@ main {
 #slide-1 .bcg {background-image:url('../img/bg1.png')}
 #slide-1 .logo {  }
 #slide-1 .hsContent {
-	top: 30%;
+	top: 40%;
 }
 #slide-1 h2 {
 	text-align: center;
