--- a/css/main.css
+++ b/css/main.css
@@ -220,23 +220,26 @@ main {
 	width: 489px;
 	margin-left: -244px;
 	color: #fff;
-	background-color: rgba(0,0,0,0.4);
+	background-color: rgba(0,0,0,0.6);
 	text-transform:uppercase;
 }
 .welcomeText h2 {
-	padding: 30px 10px 0 10px ;
+	padding: 50px 10px 0 10px ;
+	margin: 0;
 	text-align: center;
 	color: #fff;
-	font-size: 19pt;
+	font-size: 20pt;
 	font-weight: extra-bold;
-	letter-spacing: 1px;
+	letter-spacing: 0px;
+	line-height: 60%;
 }
 .welcomeText p {
-	padding: 10px 65px 20px 65px ;
+	padding: 0 40px 40px 40px ;
 	margin-bottom: 12px;
 	text-align: center;
-	font-weight: bold;
-	font-size: 13pt;
+	font-size: 16pt;
+	letter-spacing: 1px;
+
 }
 
 
@@ -343,7 +346,7 @@ main {
 	text-align: center;
 }
 	.vOverlay h3 { color: #fff; }
-	.vOverlay p { color: #fff; }
+	.vOverlay p { color: #fff; 	text-transform:uppercase; padding: 0 5px 0 5px; }
 	
 .vContainer:hover .vOverlay, .vContainer.hover .vOverlay { display: block; }
 .vContainer:hover { -webkit-filter: grayscale(100%); }
