--- a/css/main.css
+++ b/css/main.css
@@ -354,7 +354,6 @@ main {
 	
 /* Slide 1 */
 #slide-1 .bcg {background-image:url('../img/bg1.png')}
-#slide-1 .logo {  }
 #slide-1 .hsContent {
 	top: 383px;
 }
@@ -369,7 +368,7 @@ main {
 #slide-2 h2 {
 	text-align: center;
 	color: #fff;
-	font-weight: normal;
+	font-weight: bold;
 	font-size: 20pt;
 }
 
