Uppfæra vid linka

--- a/css/main.css
+++ b/css/main.css
@@ -329,6 +329,10 @@ main {
 .vContainer .n21 { background: url(../img/n/21.png) center no-repeat; }
 .vContainer .n23 { background: url(../img/n/23.png) center no-repeat; }
 .vContainer .n25 { background: url(../img/n/25.png) center no-repeat; }
+.vContainer .n28 { background: url(../img/n/28.png) center no-repeat; }
+.vContainer .n30 { background: url(../img/n/30.png) center no-repeat; }
+
+
 
 /* Hoover overlay in video calendar */
 
