--- a/css/main.css
+++ b/css/main.css
@@ -152,45 +152,79 @@ main {
 	top: 0;
 	left: 0;
 }
-.bcg {
-	background-position: center center;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-size: cover;
-	height: 100%;
-	width: 100%;
-}
+/* Medium devices (tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+	.bcg {
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-attachment: fixed;
+		background-size: cover;
+		height: 100%;
+		width: 100%;
+	}
 
-.hsContainer {
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
-	position: relative;
-}
+	.hsContainer {
+		width: 100%;
+		height: 100%;
+		overflow: hidden;
+		position: relative;
+	}
 
-.hsContent {
-	max-width: 700px;
-	position: absolute;
-	left: 50%;
-	top: 50%;
-}
-	.hsContent h2  {
-		
-		color: #fff8de;
-		font-size: 16px;
-		margin-bottom: 0px;
-		
+	.hsContent {
+		max-width: 1024px;
+		position: absolute;
+		left: 50%;
+		top: 50%;
+	}
+		.hsContent h2  {
+			
+			color: #fff8de;
+			font-size: 16px;
+			margin-bottom: 0px;
+			
+			font-weight: bold;
+			letter-spacing: 3px;
+			
+		}
+		.hsContent p {
+		}
+		.hsContent a {
+			color: #b2b2b2;
+			text-decoration: underline;
+		}
+
+	/* Slide 1 */
+	#slide-1 .bcg {background-image:url('../img/bg1.png')}
+	#slide-1 .hsContent {
+		top: 383px;
+	}
+	#slide-1 h2 {
+	}
+
+	/* Slide 2 */
+	#slide-2 .bcg {background-image:url('../img/bg2_1000.png')}
+	#slide-2 .hsContent {
+		top: 10%;
+	}
+	#slide-2 h2 {
+		text-align: center;
+		color: #fff;
 		font-weight: bold;
-		letter-spacing: 3px;
-		
+		font-size: 20pt;
 	}
-	.hsContent p {
+
+	/* Slide 3 */
+	#slide-3 .bcg {background-image:url('../img/bg3_1100.png')}
+	#slide-3 .hsContent {
+		top: 20%;
 	}
-	.hsContent a {
-		color: #b2b2b2;
-		text-decoration: underline;
-	}
-	
+		#slide-3 h2 {
+			text-align: center;
+			color: #fff;
+			text-transform: uppercase;
+		}
+
+}	
 .logo {
 	position: fixed;
 	left: 50%;
@@ -270,7 +304,7 @@ main {
 
 .aboutLinkBox {
 	position: relative;
-	width: 1020px;
+	width: 1024px;
 	left: 50%;
 	top: 35%;
 	margin-left: -509px;
@@ -396,36 +430,6 @@ main {
 .vContainer:hover { -webkit-filter: grayscale(100%); }
 
 	
-/* Slide 1 */
-#slide-1 .bcg {background-image:url('../img/bg1.png')}
-#slide-1 .hsContent {
-	top: 383px;
-}
-#slide-1 h2 {
-}
-
-/* Slide 2 */
-#slide-2 .bcg {background-image:url('../img/bg2_1000.png')}
-#slide-2 .hsContent {
-    top: 10%;
-}
-#slide-2 h2 {
-	text-align: center;
-	color: #fff;
-	font-weight: bold;
-	font-size: 20pt;
-}
-
-/* Slide 3 */
-#slide-3 .bcg {background-image:url('../img/bg3_1100.png')}
-#slide-3 .hsContent {
-	top: 20%;
-}
-	#slide-3 h2 {
-		text-align: center;
-		color: #fff;
-		text-transform: uppercase;
-	}
 
 
 
