--- a/css/main.css
+++ b/css/main.css
@@ -109,7 +109,6 @@ textarea {
 body, html {
 	height: 100%;
 	min-height: 100%;
-	min-width: 1024px;
 	background-color: #000000;
 }
 body {
@@ -132,7 +131,7 @@ h2 {
 	background: url('../img/ico_loading.gif') no-repeat center center;
 }
 section {
-	min-width: 960px;
+	min-width: 1024px;
 	opacity: 0;
 }
 .loaded section,
@@ -143,7 +142,6 @@ section {
 	transition: opacity 300ms ease-out;
 }
 main {
-	overflow-x: hidden;
 }
 #preload {
 	width: 1px;
@@ -163,7 +161,7 @@ main {
 }
 
 .hsContainer {
-	width: 100%;
+	width: 1024px;
 	height: 100%;
 	overflow: hidden;
 	position: relative;
