--- a/css/main.css
+++ b/css/main.css
@@ -333,6 +333,7 @@ main {
 		font-weight: normal;
 		text-transform: uppercase;
 	}
+	.aboutLinkRow a.tight { letter-spacing: -1px;   }
 
 #sponsors { 
 	position: absolute;
@@ -433,7 +434,16 @@ main {
 .vContainer:hover { -webkit-filter: grayscale(100%); }
 
 	
-
+.tooltip {
+	display:none;
+	position:absolute;
+	border:1px solid #333;
+	background-color:#161616;
+	border-radius:5px;
+	padding:10px;
+	color:#fff;
+	font-size:13pt;
+}
 
 
 /* ==========================================================================
